apps/homelab/twenty-crm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twenty-crm
  namespace: twenty-crm
spec:
  parentRefs:
    - name: gateway-internal
      namespace: envoy-gateway-system
  hostnames:
    - crm.urosevicvuk.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: twenty-server
          port: 3000
